syntax = "proto3";
package ollo.liquidity.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos_proto/coin.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "ollo/x/liquidity/types";

option (gogoproto.goproto_getters_all) = false;

message Pair {
  uint64 id = 1;

  string base_denom = 2;

  string quote_denom = 3;

  string escrow_addr = 4;

  uint64 last_order_id = 5;

  string last_price = 6
      [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec" ];

  uint64 current_batch_id = 7;
}

message PoolType {
  option (gogoproto.equal) = true;
  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\"",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"1\"",
      format : "uint64"
    }
  ];

  string name = 2
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        example : "yaml:\"name\"",
        format : "\"ConstantProductLiquidityPool\""
      } ];

  string description = 3
      [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        example : "yaml:\"name\"",
        format : "\"ConstantProductLiquidityPool\""
      } ];

  string creator_addr = 4 [
    (gogoproto.moretags) = "yaml:\"creator_addr\"",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"ollo16ddqestwukv0jzcyf3\"",
      format : "sdk.AccAddress"
    }
  ];
}

message PoolReserve {

  option (gogoproto.equal) = true;
  // Reserve coins deposited
  cosmos.base.v1beta1.Coin supply = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_supply\"",
    (gogoproto.jsontag) = "totalSupply",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "{\"denom\": "
                "\"poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2"
                "F02A23A4\", \"amount\": \"1000000\"}",
      format : "sdk.Coin"
    }
  ];

  string addr = 2 [
    (gogoproto.moretags) = "yaml:\"creator_addr\"",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"ollo16ddqestwukv0jzcyf3\"",
      format : "sdk.AccAddress"
    }
  ];

  string denom = 3 [
    (gogoproto.moretags) = "yaml:\"creator_addr\"",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"ollo16ddqestwukv0jzcyf3\"",
      format : "sdk.AccAddress"
    }
  ];

  string min_supply = 4
      [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
      // [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      //   example : "yaml:\"min_supply\"",
      //   format : "\"uint32\""
      // } ];

  string max_supply = 5
      [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int" ];
      // [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      //   example : "yaml:\"min_supply\"",
      //   format : "\"uint32\""
      // } ];
}

message Pool {

  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  uint64 id = 1 [
    (gogoproto.moretags) = "yaml:\"id\"",
    (gogoproto.jsontag) = "id",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"1\"",
      format : "uint64"
    }
  ];

  uint64 pair_id = 2 [
    (gogoproto.moretags) = "yaml:\"pair_id\"",
    (gogoproto.jsontag) = "pairId",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"1\"",
      format : "uint64"
    }
  ];

  uint64 type_id = 3 [
    (gogoproto.moretags) = "yaml:\"type_id\"",
    (gogoproto.jsontag) = "typeId",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"1\"",
      format : "uint64"
    }
  ];

  string creator_addr = 4 [
    (gogoproto.jsontag) = "creatorAddr",
    (gogoproto.moretags) = "yaml:\"creator_addr\"",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "\"ollo16ddqestwukv0jzcyf3\"",
      format : "sdk.AccAddress"
    }
  ];

  PoolReserve reserve = 5 [
    (gogoproto.moretags) = "yaml:\"state\"",
    (gogoproto.jsontag) = "state"
  ];

  cosmos.base.v1beta1.Coin supply = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_supply\"",
    (gogoproto.jsontag) = "totalSupply",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "{\"denom\": "
                "\"poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2"
                "F02A23A4\", \"amount\": \"1000000\"}",
      format : "sdk.Coin"
    }
  ];

  uint64 prev_deposit_req_id = 7;

  uint64 prev_withdraw_req_id = 8;

  bool disabled = 9;

  PriceRange price_range = 10 [ (gogoproto.moretags) = "yaml:\"range\"" ];
}

message PoolState {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Pool coin issued
  cosmos.base.v1beta1.Coin supply = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_supply\"",
    (gogoproto.jsontag) = "totalSupply",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example : "{\"denom\": "
                "\"poolD35A0CC16EE598F90B044CE296A405BA9C381E38837599D96F2F70C2"
                "F02A23A4\", \"amount\": \"1000000\"}",
      format : "sdk.Coin"
    }
  ];

  uint64 prev_deposit_req_id = 2
      [ (gogoproto.moretags) = "yaml:\"prev_deposit_req_id\"" ];

  uint64 prev_withdraw_req_id = 3
      [ (gogoproto.moretags) = "yaml:\"prev_withdraw_req_id\"" ];

  bool disabled = 4;

  PriceRange price_range = 5 [ (gogoproto.moretags) = "yaml:\"range\"" ];
}
message PriceRange {

  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  string min = 1
      [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec" ];
  string max = 2
      [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec" ];
}

message PoolBatch {

  uint64 id = 1;

  uint64 pool_id = 2;

  uint64 height = 3;

  uint64 deposit_id = 4;

  uint64 withdraw_id = 5;

  uint64 swap_id = 6;

  bool executed = 7 [ (gogoproto.moretags) = "yaml:\"executed\"" ];
}

enum OrderType {
  option (gogoproto.goproto_enum_prefix) = false;

  ORDER_TYPE_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "OrderTypeUnspecified" ];
  ORDER_TYPE_MARKET = 1
      [ (gogoproto.enumvalue_customname) = "OrderTypeMarket" ];
  ORDER_TYPE_LIMIT = 2 [ (gogoproto.enumvalue_customname) = "OrderTypeLimit" ];
  ORDER_TYPE_MARKET_MAKING = 3
      [ (gogoproto.enumvalue_customname) = "OrderTypeMarketMaking" ];
}
enum OrderStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  ORDER_STATUS_INVALIDATED = 0
      [ (gogoproto.enumvalue_customname) = "OrderStatusInvalidated" ];
  ORDER_STATUS_MATCHING = 1
      [ (gogoproto.enumvalue_customname) = "OrderStatusMatching" ];
  ORDER_STATUS_MATCHED = 2
      [ (gogoproto.enumvalue_customname) = "OrderStatusMatched" ];
  ORDER_STATUS_NO_MATCH = 3
      [ (gogoproto.enumvalue_customname) = "OrderStatusNoMatch" ];
  ORDER_STATUS_UNMATCHED = 4
      [ (gogoproto.enumvalue_customname) = "OrderStatusUnmatched" ];
  ORDER_STATUS_PARTIAL_MATCH = 5
      [ (gogoproto.enumvalue_customname) = "OrderStatusPartialMatch" ];
  ORDER_STATUS_UNSPECIFIED = 6
      [ (gogoproto.enumvalue_customname) = "OrderStatusUnspecified" ];
  ORDER_STATUS_EXPIRED = 7
      [ (gogoproto.enumvalue_customname) = "OrderStatusExpired" ];
  ORDER_STATUS_CANCELED = 8
      [ (gogoproto.enumvalue_customname) = "OrderStatusCanceled" ];
}

enum RequestStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  REQUEST_STATUS_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "RequestStatusUnspecified" ];
  REQUEST_STATUS_PENDING = 1
      [ (gogoproto.enumvalue_customname) = "RequestStatusPending" ];
  REQUEST_STATUS_EXECUTED = 2
      [ (gogoproto.enumvalue_customname) = "RequestStatusExecuted" ];
  REQUEST_STATUS_SUCCESS = 3
      [ (gogoproto.enumvalue_customname) = "RequestStatusSuccess" ];
  REQUEST_STATUS_FAIL = 4
      [ (gogoproto.enumvalue_customname) = "RequestStatusFail" ];
}

enum OrderDirection {
  option (gogoproto.goproto_enum_prefix) = false;
  ORDER_DIRECTION_UNSPECIFIED = 0
      [ (gogoproto.enumvalue_customname) = "OrderDirectionUnspecified" ];
  ORDER_DIRECTION_BUY = 1
      [ (gogoproto.enumvalue_customname) = "OrderDirectionBuy" ];
  ORDER_DIRECTION_SELL = 2
      [ (gogoproto.enumvalue_customname) = "OrderDirectionSell" ];
}

message RequestDeposit {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  uint64 id = 1;
  uint64 pool_id = 2;
  string depositor_addr = 3;
  cosmos.base.v1beta1.Coin pool_coin = 4 [ (gogoproto.nullable) = false ];
  int64 msg_height = 5;
  repeated cosmos.base.v1beta1.Coin deposit_amt = 6 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin accepted_amt = 7 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  RequestStatus status = 8;
}

message RequestWithdraw {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  uint64 id = 1;
  uint64 pool_id = 2;
  string withdraw_addr = 3;
  cosmos.base.v1beta1.Coin pool_coin = 4 [ (gogoproto.nullable) = false ];
  int64 msg_height = 5;
  repeated cosmos.base.v1beta1.Coin withdraw_amt = 6 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
  RequestStatus status = 7;
}

message Order {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  uint64 id = 1;
  uint64 pair_id = 2;
  string creator_addr = 3;
  int64 msg_height = 4;
  OrderType type = 5;
  OrderDirection direction = 6;
  OrderStatus status = 7;
  uint64 batch_id = 8;
  cosmos.base.v1beta1.Coin offer = 9 [ (gogoproto.nullable) = false ];

  cosmos.base.v1beta1.Coin remaining = 10 [ (gogoproto.nullable) = false

  ];
  cosmos.base.v1beta1.Coin received = 11 [ (gogoproto.nullable) = false ];
  string price = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  string amt = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string open_amt = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  google.protobuf.Timestamp expires = 15
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}

message MarketMakingOrderId {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  uint64 pair_id = 1;
  string creator_addr = 2;
  repeated uint64 order_ids = 3;
}
